--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 JWT_SECRET=vnjkfebarjjkg
-MONGO_URI= mongodb+srv://sailauayaulym:LJUhykZLvAVBWIro@tasks.c38cn.mongodb.net/?retryWrites=true&w=majority&appName=tasks
+MONGO_URI=mongodb+srv://sailauayaulym05:mRH7WwdXtzZs05Jy@cluster0.iowts.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=3000
+
+
